<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addRecipeViewModel"
            type="com.example.recipeappnew.recipeadd.RecipeAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recipeadd.RecipeAddFragment"
        android:padding="8dp">

        <TextView
            android:id="@+id/recipeAddLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/add_new_recipe_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recipeAddButtonLayout"
            app:layout_constraintTop_toBottomOf="@+id/recipeAddLabel">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeAddLabel"
                android:paddingHorizontal="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/recipeAddImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_baseline_add_photo_alternate_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.46"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:onClick="@{()->addRecipeViewModel.onRecipeAddToGallery()}"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/recipeAddName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/recipe_add_name_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeAddImage">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@={addRecipeViewModel.recipeName}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/recipeAddTypeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/recipe_add_type_label"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeAddName" />

                    <Spinner
                        android:id="@+id/recipeAddTypeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/recipeAddIngredientLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.02"
                        app:layout_constraintStart_toEndOf="@+id/recipeAddTypeLabel"
                        app:layout_constraintTop_toBottomOf="@+id/recipeAddName" />

                    <LinearLayout
                        android:id="@+id/recipeAddIngredientLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recipeAddTypeLabel">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/recipeAddIngredientTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_add_ingredient_label"
                            app:endIconDrawable="@drawable/ic_baseline_add_24"
                            app:endIconTint="#000000"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/recipeAddStepsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recipeAddIngredientLayout">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/recipeAddStepsTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_add_steps_label"
                            app:endIconDrawable="@drawable/ic_baseline_add_24"
                            app:endIconTint="#000000"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipeAddButtonLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/recipeAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_button_label"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/recipeAddCancelButton"
                android:onClick="@{()->addRecipeViewModel.onAddClicked()}"/>

            <Button
                android:id="@+id/recipeAddCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_cancel_label"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipeAddButton"
                android:onClick="@{()->addRecipeViewModel.onRecipeAddToMain()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>