<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.recipeappnew.recipeedit.RecipeEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recipeedit.RecipeEditFragment">

        <TextView
            android:id="@+id/recipeEditLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/edit_recipe_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recipeEditButtonLayout"
            app:layout_constraintTop_toBottomOf="@+id/recipeEditLabel">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeEditLabel"
                android:paddingHorizontal="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/recipeEditImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_baseline_add_photo_alternate_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.46"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:loadRecipeImageInEdit="@{viewModel.selectedRecipe}"
                        android:onClick="@{()->viewModel.onNavigateToGallery()}"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/recipeEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/recipe_add_name_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeEditImage">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            tools:text="Recipe Name"
                            android:text="@={viewModel.selectedRecipe.recipeName}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/recipeEditTypeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/recipe_add_type_label"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeEditName" />

                    <Spinner
                        android:id="@+id/recipeEditTypeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/recipe_type"
                        app:layout_constraintBottom_toTopOf="@+id/recipeEditIngredientLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.02"
                        app:layout_constraintStart_toEndOf="@+id/recipeEditTypeLabel"
                        app:layout_constraintTop_toBottomOf="@+id/recipeEditName" />

                    <LinearLayout
                        android:id="@+id/recipeEditIngredientLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recipeEditTypeLabel">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/recipeEditIngredientTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_add_ingredient_label"
                            app:endIconDrawable="@drawable/ic_baseline_add_24"
                            app:endIconTint="#000000"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/recipeEditStepsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recipeEditIngredientLayout">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/recipeEditStepsTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_add_steps_label"
                            app:endIconDrawable="@drawable/ic_baseline_add_24"
                            app:endIconTint="#000000"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipeEditButtonLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/recipeEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_edit_button_label"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/recipeEditCancelButton"
                android:onClick="@{()->viewModel.onUpdateClicked()}"/>

            <Button
                android:id="@+id/recipeEditCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_cancel_label"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipeEditButton"
                android:onClick="@{()->viewModel.onNavigateBackToDetail()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>